--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "url": "git+https://github.com/JingLuoChen/jlc-ui.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "jingluochen",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/JingLuoChen/jlc-ui/issues"
