--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,30 +1,30 @@
 {
     "compilerOptions": {
-        // 与 Vue 的浏览器支持保持一致
-        "target": "es5",
-        "lib": [
-            "es2015",
-            "dom"
-        ],
-        "strict": true,
-        "strictPropertyInitialization": false,
-        "module": "commonjs",
+        "target": "esnext",
+        "useDefineForClassFields": true,
+        "module": "esnext",
         "moduleResolution": "node",
-        "experimentalDecorators": true,
-        "strictFunctionTypes": false,
+        "strict": true,
+        "jsx": "preserve",
+        "sourceMap": true,
+        "resolveJsonModule": true,
+        "esModuleInterop": true,
+        "allowJs": true,
+        "lib": ["esnext", "dom"],
+        "skipLibCheck": true,
         "paths": {
-            "~/*": [
-                "./packages/*"
-            ]
-        },       
+            "packages/*": ["./packages/*"]
+        }
     },
     "include": [
-        "src/**/*.vue",
+        "*.ts",
         "src/**/*.ts",
-        "packages/**/*.vue",
-        "packages/**/*.ts"
-    ],
-    "exclude": [
-        "node_modules"
+        "src/**/*.d.ts",
+        "src/**/*.tsx",
+        "src/**/*.vue",
+        "packages/**/*.ts",
+        "packages/**/*.d.ts",
+        "packages/**/*.tsx",
+        "packages/**/*.vue"
     ]
 }
