--- a/package.json
+++ b/package.json
@@ -4,24 +4,29 @@
   "description": "",
   "keyword": "vue3 vite",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --config ./build/base.config.ts",
     "build": "vite build",
     "build:lib": "vue-tsc --noEmit && vite build --config ./build/lib.config.ts",
     "build:package": "vue-tsc --noEmit && vite build"
   },
   "dependencies": {
+    "@vitejs/plugin-vue": "^2.3.3",
     "less": "^4.1.2",
+    "prismjs": "^1.25.0",
     "vue": "^3.0.4"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^2.0.0",
     "@vitejs/plugin-vue-jsx": "^1.3.3",
     "less-loader": "^7.3.0",
+    "fs-extra": "^10.0.0",
+    "handlebars": "^4.7.7",
     "sass": "^1.45.1",
     "typescript": "^4.4.4",
     "vite": "^2.8.6",
+    "vite-plugin-copy": "^0.1.6",
     "vite-plugin-dts": "^0.9.6",
     "vite-plugin-md": "^0.11.4",
+    "vue-router": "^4.0.12",
     "vue-tsc": "^0.29.8"
   },
   "repository": {
