--- a/package.json
+++ b/package.json
@@ -1,6 +1,14 @@
 {
   "name": "jlc-ui",
-  "version": "1.0.0",
+  "version": "1.0.1",
+  "main": "./lib/jlc-ui.umd.js",
+  "module": "./lib/jlc-ui.es.js",
+  "exports": {
+    ".": {
+      "import": "./lib/jlc-ui.es.js",
+      "require": "./lib/jlc-ui.umd.js"
+    }
+  },
   "description": "",
   "keyword": "vue3 vite",
   "scripts": {
@@ -10,21 +18,24 @@
     "build:package": "vue-tsc --noEmit && vite build"
   },
   "dependencies": {
-    "@vitejs/plugin-vue": "^2.3.3",
     "less": "^4.1.2",
     "prismjs": "^1.25.0",
+    "vite-plugin-markdown": "^2.0.2",
     "vue": "^3.0.4"
   },
   "devDependencies": {
+    "@types/node": "^18.0.0",
+    "@vitejs/plugin-vue": "^2.0.1",
     "@vitejs/plugin-vue-jsx": "^1.3.3",
-    "less-loader": "^7.3.0",
     "fs-extra": "^10.0.0",
     "handlebars": "^4.7.7",
+    "less-loader": "^7.3.0",
     "sass": "^1.45.1",
     "typescript": "^4.4.4",
     "vite": "^2.8.6",
     "vite-plugin-copy": "^0.1.6",
     "vite-plugin-dts": "^0.9.6",
+    "vite-plugin-libcss": "^1.0.5",
     "vite-plugin-md": "^0.11.4",
     "vue-router": "^4.0.12",
     "vue-tsc": "^0.29.8"
