--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,21 +10,27 @@
         "resolveJsonModule": true,
         "esModuleInterop": true,
         "allowJs": true,
-        "lib": ["esnext", "dom"],
+        "lib": [
+            "esnext",
+            "dom"
+        ],
         "skipLibCheck": true,
         "paths": {
-            "packages/*": ["./packages/*"]
+            "@/*": [
+                "./src/*"
+            ],
+            "packages/*": [
+                "./packages/*"
+            ]
         }
     },
     "include": [
         "*.ts",
         "src/**/*.ts",
         "src/**/*.d.ts",
-        "src/**/*.tsx",
         "src/**/*.vue",
         "packages/**/*.ts",
         "packages/**/*.d.ts",
-        "packages/**/*.tsx",
         "packages/**/*.vue"
     ]
 }
