--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jlc-ui",
+  "name": "@jlc/jlc-ui",
   "version": "1.0.1",
   "main": "./lib/jlc-ui.umd.js",
   "module": "./lib/jlc-ui.es.js",
