--- a/package.json
+++ b/package.json
@@ -1,21 +1,29 @@
 {
-  "name": "@jlc/jlc-ui",
-  "version": "1.0.1",
-  "main": "./lib/jlc-ui.umd.js",
-  "module": "./lib/jlc-ui.es.js",
+  "name": "jlc-ui",
+  "version": "1.0.4",
+  "main": "./dist/jlc-ui.umd.js",
+  "module": "./dist/jlc-ui.es.js",
   "exports": {
     ".": {
-      "import": "./lib/jlc-ui.es.js",
-      "require": "./lib/jlc-ui.umd.js"
+      "import": "./dist/jlc-ui.es.js",
+      "require": "./dist/jlc-ui.umd.js"
+    },
+    "./dist/style.css": {
+      "import": "./dist/style.css",
+      "require": "./dist/style.css"
     }
   },
+  "files": [
+    "dist",
+    "types"
+  ],
+  "typings": "./dist/packages/index.d.ts",
   "description": "",
   "keyword": "vue3 vite",
   "scripts": {
     "dev": "vite --config ./build/base.config.ts",
     "build": "vite build",
-    "build:lib": "vue-tsc --noEmit && vite build --config ./build/lib.config.ts",
-    "build:package": "vue-tsc --noEmit && vite build"
+    "build:lib": "vue-tsc --noEmit && vite build --config ./build/lib.config.ts"
   },
   "dependencies": {
     "less": "^4.1.2",
@@ -32,6 +40,7 @@
     "less-loader": "^7.3.0",
     "sass": "^1.45.1",
     "typescript": "^4.4.4",
+    "rollup-plugin-terser": "^7.0.2",
     "vite": "^2.8.6",
     "vite-plugin-copy": "^0.1.6",
     "vite-plugin-dts": "^0.9.6",
@@ -44,7 +53,11 @@
     "type": "git",
     "url": "git+https://github.com/JingLuoChen/jlc-ui.git"
   },
-  "keywords": [],
+  "keywords": [
+    "ui",
+    "vue",
+    "vite"
+  ],
   "author": "jingluochen",
   "license": "ISC",
   "bugs": {
